# lkdlt

./: .flake8  .gitignore  Makefile  kanjis  main-list.txt  pyproject.toml
lkdlt/: __init__.py  animcjk.py  anki_connect.py  config.py  examples.py  furigana.py  jmdict.py  kanji_infos.py  kanjidic.py  loading.py  model.py  paths.py  pronunciation.py  stories.py  utils.py
lkdlt/card/: back.html  front.html  generation-back.html  recognition-back.html  recognition-front.html  style.css
lkdlt/cli/: __init__.py  cjve.py  create_deck.py  create_index.py  deck.py  edit_config.py  examples.py  index.py  jmdict.py  kanjidic.py  stats.py  vocab.py
lkdlt/tests/: test_pronunciation.py
lkdlt/tests/pronunciation_data/: hl.txt  hll.txt  lhhh.txt  lhhhh.txt  lhll.txt
