[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "lkdlt"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
appdirs = "^1.4"
dango = "^0.0.1"
pydantic = "^1"
python = "^3.10"
pyyaml = "^6"
rich = "^13"
spacy = "^3"
tatoebatools = "^0.2"
typer = "^0.7"
xmltodict = "^0.13"
jcconv3 = "^1.2.3"
jamdict = "^0.1a11.post2"
jamdict-data = "^1.5"

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = "^6"
flake8-bugbear = "^23"
isort = "^5"
mypy = "^1"
pylint = "^2"
pytest = "^7"
types-pyyaml = "^6"

[tool.poetry.scripts]
lkdlt = "lkdlt.cli:main"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
