[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
name = "lkdlt"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
appdirs = "^1"
jcconv3 = "^1"
lxml = "^5"
pydantic = "^1"
python = "^3.10"
pyyaml = "^6"
rich = "^13"
setuptools = "^69"
sudachidict-core = "^20240109"
sudachipy = "^0.6"
tatoebatools = "^0.2"
typer = "^0.12"
xmltodict = "^0.13"

[tool.poetry.group.dev.dependencies]
black = "^24"
flake8 = "^7"
flake8-bugbear = "^24"
isort = "^5"
mypy = "^1"
pylint = "^3"
pytest = "^8"
types-pyyaml = "^6"

[tool.poetry.scripts]
lkdlt = "lkdlt.cli:main"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
